# ATHintel

./: .gitignore  ATHENS_ENERGY_INVESTMENT_RISK_ASSESSMENT.md  CHANGELOG.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_BUSINESS_VALUE_ASSESSMENT.md  GREEK_MARKET_INTEGRATION_VALIDATION.md  INVESTMENT_OPPORTUNITIES.md  LICENSE  MARKET_INTELLIGENCE.md  NFR_COMPREHENSIVE_ASSESSMENT_REPORT.md  PHASE3_COMPLETION_REPORT.md  PRODUCTION_MONITORING_SETUP.md  PROJECT_METHODOLOGY.md  README.md  README_ENERGY_ARCHITECTURE.md  README_ENTERPRISE.md  SECURITY_AUDIT_CHECKLIST_ENERGY_INVESTMENTS.md  athens_investment_dashboard.md  demo_monitoring.json  deploy_production.sh  pyproject.toml  pytest.ini  requirements_enterprise_2025.txt  run_linting.py  test_proven_collector.py  test_proven_scrapers.py
.bmad-core/: install-manifest.yaml
.bmad/artifacts/: TECH-001-Energy-Upgrade-Architecture.md
.github/: REALDATA_HIGHLIGHT.md
.github/ISSUE_TEMPLATE/: real_data_issue.md  synthetic_data_issue.md
.github/workflows/: ci.yml  feature-flags-ci.yml  test-pipeline.yml
analysis/: Data_Authenticity_Report_20250806_160032.md  authentic_properties_value_maximizer.py  comparative-analysis.md  data-disclaimer.md  data-verification-plan.md  exarchia-cultural-district.md  final_scraping_assessment_20250806_143847.json  kolonaki-luxury-market.md
archive-complex-structure/: BUSINESS_CASE.md  BUSINESS_CASE_EXECUTIVE.md  COMPREHENSIVE_QA_FINAL_ASSESSMENT.md  PERFORMANCE_MONITORING_BASELINE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_STATUS.md  README.md  README_ENTERPRISE_PLATFORM.md  REPOSITORY_STRUCTURE.md  USER_ADOPTION_TRACKING_SYSTEM.md  main.py  production.db  requirements.txt  run_proven_collector.py  run_tests.py
archive-complex-structure/analysis/: Final_Scraping_Assessment_Report_20250806_143847.md  authentic_properties_value_maximization_20250806_161052.json
archive-complex-structure/config/: enhanced_system_config_20250806_135910.json  feature_flags.json  platform_config.json  requirements.txt
archive-complex-structure/debug/: debug_scraper_test.py
archive-complex-structure/docker/: docker-compose.yml
archive-complex-structure/examples/: resilience_patterns_demo.py
archive-complex-structure/fakedata/: README.md
backup/: test_properties_1757171445.json
config/: validator_config.yaml
districts/: README.md
docs/: CONTRIBUTING.md  README.md  feature-flags-usage-guide.md  prd-review-guide.md  prd.md  sprint-1-readiness-checklist.md  sprint1_review.md  sprint2_plan.md  sprint2_review.md  sprint3_plan.md  sprint3_review.md  week-0-checklist.md  week-0-day-1-report.md  week-0-day-2-report.md
enterprise/: __init__.py
examples/: phase3_integration_demo.py
fakedata/: README.md
legacy-reports/: Executive_Dashboard_Summary.md  Executive_Investment_Summary_20250806_161200.md  executive_investment_summary_20250805_120606.md
realdata/: README.md
reports/: Enhanced_Deployment_Report_20250806_135910.md  athens_market_intelligence_report_20250806_114015.md  comprehensive_real_data_analysis_20250806_142308.json
scripts/: EXPERT_ATHENS_COLLECTOR_README.md  PARALLEL_BATCH_README.md  TARGETED_EXPANSION_README.md  analyze_real_success_patterns.py  organize_professional_repo.py  parallel_batch_collector.py  proven_1000_property_expansion.py  reorganize_realdata_fakedata.py  reorganize_repository.py  run_production_collector.py  run_real_data_extraction.py  run_scalable_collection.py  scaling_recommendations_20250806_115234.json  setup_real_scraping.py  sprint2_demo.py  validate_parallel_system.py
src/: __init__.py
terraform/: main.tf  variables.tf
tests/: README.md  conftest.py  test_cqrs_infrastructure.py  test_energy_domain.py  test_feature_flags.py
(+226 files in other folders)
